# coder

./: justfile  pyproject.toml
src/: main.py
